<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:stretchColumns="*">

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">

        <EditText
            android:id="@+id/inputExp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:layout_span="4"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="end">

        <Button
            android:id="@+id/btnReset"
            android:layout_height="match_parent"
            android:layout_span="3"
            android:text="@string/reset"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_height="match_parent"
            android:text="@string/clear"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divide"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/four"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/five"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/six"/>

        <Button
            android:id="@+id/btnMultply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiply"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"/>

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/subtract"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/point"/>

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"/>

        <Button
            android:id="@+id/btnEq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equals"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"/>
    </TableRow>
</TableLayout>

